--- a/AutomatedTellerMachine/AutomatedTellerMachine.csproj
+++ b/AutomatedTellerMachine/AutomatedTellerMachine.csproj
@@ -267,6 +267,8 @@
     <Content Include="Views\CheckingAccount\Statement.cshtml" />
     <Content Include="Views\Transaction\Withdrawal.cshtml" />
     <Content Include="Views\Transaction\TransferFunds.cshtml" />
+    <Content Include="Views\Transaction\_TransferSuccess.cshtml" />
+    <Content Include="Views\Transaction\_TransferForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
